--- a/Makefile.win
+++ b/Makefile.win
@@ -7,7 +7,7 @@ OBJECTS=$(SOURCES:.cpp=.o)
 CXX=mingw32-g++
 DEFS= -DLIN=1 -fPIC -m32 -fno-stack-protector -DXPLM200 -ggdb
 CXXFLAGS+=-Wall -I$(SDK)/CHeaders/XPLM -I$(SDK)/CHeaders/Widgets -DAPL=0 -DIBM=1 -DXPLM200 
-LNFLAGS=-L$(SDK)/Libraries/Win -Lc:/mingw/sdk/lib
+LNFLAGS=-shared -L$(SDK)/Libraries/Win -Lc:/mingw/sdk/lib
 LIBS=-lxplm -lxpwidgets -lm -lOpenGL32
 
 all: $(TARGET)
@@ -16,8 +16,7 @@ all: $(TARGET)
 	$(CXX) $(CXXFLAGS) -c $<
 	
 $(TARGET): $(OBJECTS)
-	dllwrap --dllname=$(TARGET) --driver-name=$(CXX) $(OBJECTS) $(LNFLAGS) $(LIBS)
-	strip --strip-all $(TARGET)
+	$(CXX) -o $(TARGET) $(LNFLAGS) $(OBJECTS) $(LIBS)
 
 clean:
 	del $(OBJECTS) $(TARGET)
